FIN-1-3 almost recovered

--- a/WBFS.html
+++ b/WBFS.html
@@ -57,7 +57,7 @@ permalink: /technology
         <h2> Document Embedding </h2>
         <br>
       </div>
-      <a href="/fintext.github.io/papers/AutomaticClassificationOfSecurities_YangLeeChoCho_2016_TechReport.pdf" class="btn btn-view-works">Download Paper</a>
+      <img src="" alt="document_embedding_flow_chart">
     </div>
 </section>
 
