--- a/index.html
+++ b/index.html
@@ -17,42 +17,7 @@ permalink: /
     </div>
   </div>
 </section>
-<!-- Wrapper Start
-<section id="intro">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-7 col-sm-12">
-        <div class="block">
-          <div class="section-title">
-            <h2>About Us</h2>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics</p>
-          </div>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id </p>
-        </div>
-      </div>
-      <div class="col-md-5 col-sm-12">
-        <div class="block">
-          <img src="img/wrapper-img.png" alt="Img">
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-<section id="feature">
-<div class="container">
-  <div class="row">
-    <div class="col-md-6 col-md-offset-6">
-      <h2>WE BELIEVE IN GREAT IDEAS</h2>
-      <p>Maecenas faucibus mollis interdum. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-      <p>Maecenas faucibus mollis interdum. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-      <p>Maecenas faucibus mollis interdum. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-      <a href="#" class="btn btn-view-works">View Works</a>
-    </div>
-  </div>
-</div>
-</section>
--->
-<!-- Service Start -->
+<!--
 <section class="service">
   <div class="container">
     <div class="row">
@@ -64,7 +29,6 @@ permalink: /
     <div class="row ">
       <div class="col-sm-6 col-md-4">
         <div class="service-item">
-          <!--i class="icon ion-ios-color-filter-outline"></i-->
           <a href="{{ site.baseurl }}/btic">
             <img src="{{ site.baseurl }}/img/dendrogram.png" style="width: 50px;margin: 20px 0"/>
             <h4>BTIC</h4>
@@ -90,7 +54,7 @@ permalink: /
       </div>
     </div>
   </div>
-</section>
+</section-->
 <!-- 
 <section id="call-to-action">
   <div class="container">
@@ -105,8 +69,6 @@ permalink: /
     </div>
   </div>
   </section>
--->
-<!--
 <section id="testimonial">
   <div class="container">
     <div class="row">
