--- a/work.html
+++ b/work.html
@@ -16,159 +16,273 @@ permalink: /work/
         </div>
     </div>
 </section>
-    <!-- Portfolio Start -->
+
 <section id="portfolio-work">
-    <div class="container">
-        <div class="row">
-          <div class="col-md-12">
-            <div class="block">
-              <!--
-              <div class="portfolio-menu">
-                <ul>
-                    <li class="filter" data-filter="all">Team</li>
-                    <li class="filter" data-filter=".Branding">SunZun Cho</li>
-                    <li class="filter" data-filter=".Websites">HeJin Lee</li>
-                    <li class="filter" data-filter=".Graphic">HoSung Yang</li>
-                    <li class="filter" data-filter=".design">DongYoung Min</li>
-                    <li class="filter" data-filter=".Video">SungHwan Jeon</li>
-                </ul>
-                </div>
-               -->
-              <div class="portfolio-contant">
-                <ul id="portfolio-contant-active" >
-                  <li class="mix Branding">
-                    <a>
-                        <img src="{{ site.baseurl }}/img/profile/zoon.jpg" alt="">
-                        <div class="overly">
-                          <div class="position-center">
-                            <h2>Sungzoon Cho</h2>
-                          </div>
-                        </div>
-                        </a>
-                  </li>
-                  <li class="mix Websites">
-                    <a>
-                      <img src="{{ site.baseurl }}/img/profile/hsyang.jpg" alt="">
-                      <div class="overly">
-                        <div class="position-center">
-                          <h2>Hoseong Yang</h2>
-                        </div>
-                      </div>
-                    </a>
-                  </li>
-                  <li class="mix Graphic">
-                    <a >
-                      <img src="{{ site.baseurl }}/img/profile/hyejin2.jpg" alt="">
-                      <div class="overly">
-                        <div class="position-center">
-                          <h2>Hyejin Lee</h2>
-                        </div>
-                      </div>
+	<div class="container">
+		<div id="zoon" class="member hover row">
+			<div class="col-md-2">
+				<p></p>
+				<img class="width-100 thumbnail" src="{{site.baseurl}}/img/profile/zoon.jpg" align="bottom">
+			</div>
+			<div class="col-md-10", style="text-align:left">
+				<h3>조 성 준 교수 (趙成埈, Sungzoon Cho)</h3>
+				<table class="table table-condensed", style="text-align:left">
+					<tr>
+						<td>Work</td>
+						<td>
+							Professor, Industrial Engineering, Seoul National University
+						</td>
+					</tr>
+					<tr>
+						<td>Email</td>
+						<td>
+							zoon at snu.ac.kr
+						</td>
+					</tr>
 
-                    </a>
-                  </li>
-                  <li class="mix design">
-                    <a >
-                      <img src="{{ site.baseurl }}/img/profile/sungwhan.jpg" alt="">
-                      <div class="overly">
-                        <div class="position-center">
-                          <h2>Sungwhan Jeon</h2>
-                        </div>
-                      </div>
-                    </a>
-                  </li>
-                  <li class="mix Video">
-                    <a >
-                      <img src="{{ site.baseurl }}/img/profile/dy-min.jpg" alt="">
-                      <div class="overly">
-                        <div class="position-center">
-                          <h2>Dongyoung Min</h2>
-                        </div>
-                      </div>
-                    </a>
-                  </li>
-                  <li class="mix Graphic">
-                    <a >
-                      <img src="{{ site.baseurl }}/img/profile/dmshin.jpg" alt="">
-                      <div class="overly">
-                        <div class="position-center">
-                          <h2>Dongmin Shin</h2>
-                        </div>
-                      </div>
-                    </a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </div>
-        </div>
-    </div>
-</section>
+					<tr>
+						<td>Homepage</td>
+						<td>
+							<a href = http://dm.snu.ac.kr/~zoon/index.html target=_blank> dm.snu.ac.kr/~zoon/index.html</a>
+						</td>
+					</tr>
 
-<!-- Clients Logo Section Start
-<section id="clients-logo-section">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <div class="block">
-          <div id="clients-logo" class="owl-carousel">
-            <div class="clients-logo-img">
-              <img src="{{ site.baseurl }}/img/clients/clients-logo1.png" alt="Features">
-            </div>
-            <div class="clients-logo-img">
-              <img src="{{ site.baseurl }}/img/clients/clients-logo2.png" alt="Features">
-            </div>
-            <div class="clients-logo-img">
-              <img src="{{ site.baseurl }}/img/clients/clients-logo3.png" alt="Features">
-            </div>
-            <div class="clients-logo-img">
-              <img src="{{ site.baseurl }}/img/clients/clients-logo4.png" alt="Features">
-            </div>
-            <div class="clients-logo-img">
-              <img src="{{ site.baseurl }}/img/clients/clients-logo5.png" alt="Features">
-            </div>
-            <div class="clients-logo-img">
-              <img src="{{ site.baseurl }}/img/clients/clients-logo3.png" alt="Features">
-            </div>
-            <div class="clients-logo-img">
-              <img src="{{ site.baseurl }}/img/clients/clients-logo2.png" alt="Features">
-            </div>
-            <div class="clients-logo-img">
-              <img src="{{ site.baseurl }}/img/clients/clients-logo5.png" alt="Features">
-            </div>
-            <div class="clients-logo-img">
-              <img src="{{ site.baseurl }}/img/clients/clients-logo1.png" alt="Features">
-            </div>
-            <div class="clients-logo-img">
-              <img src="{{ site.baseurl }}/img/clients/clients-logo4.png" alt="Features">
-            </div>
-            <div class="clients-logo-img">
-              <img src="{{ site.baseurl }}/img/clients/clients-logo5.png" alt="Features">
-            </div>
-            <div class="clients-logo-img">
-              <img src="{{ site.baseurl }}/img/clients/clients-logo3.png" alt="Features">
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  </section>
--->
+					<tr>
+						<td>Areas of Interest</td>
+						<td>
+							Big Data, Business Analytics, Machine Learning, Anomaly Detection
+						</td>
+					</tr>
 
+					<tr>
+						<td>PhD</td>
+						<td>
+							Computer Science, University of Maryland
+						</td>
+					</tr>
 
-<!-- Call to action Start
-<section id="call-to-action">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <div class="block">
-          <h2>We design delightful digital experiences.</h2>
-          <p>Read more about what we do and our philosophy of design. Judge for yourself The work and results we’ve achieved for other clients, and meet our highly experienced Team who just love to design.</p>
-          <a class="btn btn-default btn-call-to-action" href="#" >Tell Us Your Story</a>
-        </div>
-      </div>
-    </div>
-  </div>
-  </section>
--->
+					<tr>
+						<td>M.S.</td>
+						<td>
+							Computer Science, University of Washington
+						</td>
+					</tr>
+
+					<tr>
+						<td>M.S./B.S.</td>
+						<td>
+							Industrial Engineering, Seoul National University
+						</td>
+					</tr>
+				</table>
+			</div>
+		</div>
+		<div id="hosung" class="member hover row">
+			<div class="col-md-2">
+				<p></p>
+				<img class="width-100 thumbnail" src="{{site.baseurl}}/img/profile/hsyang.jpg" align="bottom">
+			</div>
+			<div class="col-md-10", style="text-align:left">
+				<h3>양 호 성 (Hoseong Yang)</h3>
+				<table class="table table-condensed", style="text-align:left">
+					<tr>
+						<td>Email</td>
+						<td>
+							hoseong at dm.snu.ac.kr
+						</td>
+					</tr>
+					<tr>
+						<td>Areas of Interest</td>
+						<td>
+							Text Mining, Business Intelligence
+						</td>
+					</tr>
+					<tr>
+						<td>Experience</td>
+						<td>
+							Internship at Daum Soft, 2013.12-2014.02; Internship at LG CNS, 2014.07-2014.08
+						</td>
+					</tr>
+
+					<tr>
+						<td>M.S.</td>
+						<td>
+							Industrial Engineering, Seoul Nat'l Univ., 2017
+						</td>
+					</tr>
+
+					<tr>
+						<td>B.S.</td>
+						<td>
+							Industrial Engineering, Seoul Nat'l Univ., 2015
+						</td>
+					</tr>
+					<tr>
+						<td>High School</td>
+						<td>
+							Sungdeok, 2008
+						</td>
+					</tr>
+				</table>
+			</div>
+		</div>
+		<div id="hyejin" class="member hover row">
+			<div class="col-md-2">
+				<p></p>
+				<img class="width-100 thumbnail" src="{{site.baseurl}}/img/profile/hyejin2.jpg" align="bottom">
+			</div>
+			<div class="col-md-10", style="text-align:left">
+				<h3>이 혜 진 (Hyejin Lee)</h3>
+				<table class="table table-condensed", style="text-align:left">
+					<tr>
+						<td>Email</td>
+						<td>
+							hyejinlee at dm.snu.ac.kr
+						</td>
+					</tr>
+					<tr>
+						<td>Experience</td>
+						<td>
+							Wharton School, U Penn, 2008-2011, 2013-2014; International Food Policy Research Institute, 2012; Federal Reserve Bank of Chicago, 2007
+						</td>
+					</tr>
+
+					<tr>
+						<td>M.S.</td>
+						<td>
+							Economics, Cornell Univ., 2013
+						</td>
+					</tr>
+
+					<tr>
+						<td>B.S.</td>
+						<td>
+							Economics, Univ. of Chicago, 2008
+						</td>
+					</tr>
+					<tr>
+						<td>High School</td>
+						<td>
+							New Hampton School, 2004
+
+						</td>
+					</tr>
+				</table>
+			</div>
+		</div>
+		<div id="sungwhan" class="member hover row">
+			<div class="col-md-2">
+				<p></p>
+				<img class="width-100 thumbnail" src="{{site.baseurl}}/img/profile/sungwhan.jpg" align="bottom">
+			</div>
+			<div class="col-md-10", style="text-align:left">
+				<h3>전 성 환 (Sung Whan Jeon)</h3>
+				<table class="table table-condensed", style="text-align:left">
+					<tr>
+						<td>Email</td>
+						<td>
+							sjeon at dm.snu.ac.kr
+						</td>
+					</tr>
+					<tr>
+						<td>B.S.</td>
+						<td>
+							Computer Science, Mathematics, Emory Univ. 2014
+						</td>
+					</tr>
+					<tr>
+						<td>High School</td>
+						<td>
+							St. John's, 2009
+						</td>
+					</tr>
+				</table>
+			</div>
+		</div>
+		<div id="dongyoung" class="member hover row">
+			<div class="col-md-2">
+				<p></p>
+				<img class="width-100 thumbnail" src="{{site.baseurl}}/img/profile/dy-min.jpg" align="bottom">
+			</div>
+			<div class="col-md-10", style="text-align:left">
+				<h3>민 동 영 (Dongyoung Min)</h3>
+				<table class="table table-condensed", style="text-align:left">
+					<tr>
+						<td>Email</td>
+						<td>
+							dongyoung.min at dm.snu.ac.kr
+						</td>
+					</tr>
+					<tr>
+						<td>Areas of Interest</td>
+						<td>
+							Time Series Anlaysis
+						</td>
+					</tr>
+					<tr>
+						<td>Experience</td>
+						<td>
+							Ambrothia LLC
+						</td>
+					</tr>
+
+					<tr>
+						<td>B.S.</td>
+						<td>
+							Mathematical Sciences, Business and Technology Management, Financial Engineering, KAIST, 2016
+
+						</td>
+					</tr>
+					<tr>
+						<td>High School</td>
+						<td>
+							Busan Science, 2011
+						</td>
+					</tr>
+				</table>
+			</div>
+		</div>
+		<div id="hosung" class="member hover row">
+			<div class="col-md-2">
+				<p></p>
+				<img class="width-100 thumbnail" src="{{site.baseurl}}/img/profile/dmshin.jpg" align="bottom">
+			</div>
+			<div class="col-md-10", style="text-align:left">
+				<h3>신 동 민 (Dongmin Shin)</h3>
+				<table class="table table-condensed", style="text-align:left">
+					<tr>
+						<td>Email</td>
+						<td>
+							dongmin.shin at dm.snu.ac.kr
+						</td>
+					</tr>
+					<tr>
+						<td>Areas of Interest</td>
+						<td>
+							Natural Language Processing, Algorithmic Discrimination, Data Visualization
+						</td>
+					</tr>
+					<tr>
+						<td>Experience</td>
+						<td>
+							Internship at Riiid!, 2017.07-2017.08; Fellowship at Google News Lab, 2017.01-2017.02
+						</td>
+					</tr>
+					<tr>
+						<td>B.S.</td>
+						<td>
+							Earth Science Education (Science Communication), Seoul Nat’l Univ., 2016
+
+						</td>
+					</tr>
+					<tr>
+						<td>High School</td>
+						<td>
+							Busan Science, 2012
+						</td>
+					</tr>
+				</table>
+			</div>
+		</div>
+	</div>
+<section>
