add brand cloud, add flow chart - recovery

--- a/WBFS.html
+++ b/WBFS.html
@@ -57,7 +57,7 @@ permalink: /technology
         <h2> Document Embedding </h2>
         <br>
       </div>
-      <img src="" alt="document_embedding_flow_chart">
+      <img src="img/document_embedding_flowchart.png" alt="document_embedding_flow_chart">
     </div>
 </section>
 
